--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.0.0.RELEASE</version>
+			<version>[2.0.10,)</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.oauth-client</groupId>
